--- a/index.html
+++ b/index.html
@@ -1,56 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <title>Frontend Mentor | Order summary card</title>
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href= "order.css" rel ="stylesheet">
+  <link href="order.css" rel="stylesheet">
 
 </head>
-<body background="./images/pattern-background-desktop.svg">
 
-<div class="container">
+<body>
 
-  <article class="music">
-    <img src="./images/illustration-hero.svg" alt="">
-  </article>
+  <img class="background-1" src="./images/pattern-background-desktop.svg" alt="">
+  <img class="background-2" src="./images/pattern-background-mobile.svg" alt="">
 
-  <article class="text">
-    <h2>Order Summary</h2>
-    <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
-      device anywhere you like!
-    </p>
-  </article>
-  
-<article>
-  <ul>
-    <li><img src="./images/icon-music.svg" alt=""></li>
-    <li>Annual Plan
-  <span>$59.99/year</span>
-</li>
-    <li><a>Change</a></li>
-  </ul>
-</article>
-  
-<div class="buttons">
-  <button class="proceed"> Proceed to Payment</button> 
-  <button class= "cancel">Cancel Order</button>
-</div>
-  
-  
+  <div class="container">
 
-</div>
+    <article class="music">
+      <img src="./images/illustration-hero.svg" alt="">
+    </article>
 
+    <article class="text">
+      <h2>Order Summary</h2>
+      <p>You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
+    </article>
 
+    <article>
+      <ul>
+        <li><img src="./images/icon-music.svg" alt=""></li>
+        <li>Annual Plan
+          <span>$59.99/year</span>
+        </li>
+        <li><a>Change</a></li>
+      </ul>
+    </article>
+
+    <div class="buttons">
+      <button class="proceed"> Proceed to Payment</button>
+      <button class="cancel">Cancel Order</button>
+    </div>
 
 
-  
-  
+
+  </div>
+
+
+
+
+
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">gLitCH1904</a>.
   </div>
 </body>
+
 </html>
