--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">gLitCH1904</a>.
+    Coded by <a href="#">tIfe oLusanya</a>.
   </div>
 </body>
 
